ingress/huawei/tomcat_deploy.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: tomcat
  labels:
    app: tomcat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - image: tomcat:9.0
        imagePullPolicy: ifNotPresent
        name: tomcat
        ports:
          - containerPort: 8080
