ingress/huawei/tomcat_svc.yaml
kind: Service
apiVersion: v1
metadata:
  name:  tomcat
spec:
  selector:
    app:  tomcat
  type:  NodePort
  ports:
  - name:  tomcat
    port:  8080
    targetPort:  8080
